--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "core-js": "^3.6.5",
-    "quasar": "^1.0.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "axios": "0.21.1"
+    "@quasar/extras": "1.10.4",
+    "axios": "0.21.1",
+    "core-js": "3.11.0",
+    "firebase": "8.4.1",
+    "quasar": "1.15.10",
+    "vue": "2.6.12",
+    "vue-router": "3.5.1",
+    "vue-toastify": "^1.8.0",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "node-sass": "^4.13.0",
-    "postcss-rtl": "^1.2.3",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-quasar": "~3.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "4.5.12",
+    "@vue/cli-plugin-router": "4.5.12",
+    "@vue/cli-service": "4.5.12",
+    "node-sass": "5.0.0",
+    "postcss-rtl": "1.7.3",
+    "sass-loader": "10.1.1",
+    "vue-cli-plugin-quasar": "3.0.1",
+    "vue-template-compiler": "2.6.12",
+    "firebase-tools": "9.10.0"
   }
 }
